--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,12 @@ body {
     overflow: hidden;  /* Contains the floated elements */
     margin-bottom: 40px;
 }
+nav {
+    text-align: center;
+}
+header {
+    margin-bottom: 30px;
+}
 
 table {
     width: 100%;
