--- a/styles.css
+++ b/styles.css
@@ -108,9 +108,12 @@ h1, h2 {
 }
 .form-container-center {
     margin-top: 40px;
-    max-width: fit-content;
+    width: 400px;
     margin-left: auto;
     margin-right: auto;
+    background-color: rgba(249, 249, 249, 0.8);
+    border-radius: 4px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.1);
 }
 
 .hero-section {
