--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,14 @@ body {
     margin: 0 auto;
     padding: 20px;
 }
+body.red{
+    font-family: Arial, sans-serif;
+    background-color: #e448379a;
+    color: #333;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+}
 
 /* Add a wrapper for the table for better layout control */
 .table-container {
@@ -119,6 +127,14 @@ h1, h2 {
 .hero-section {
     background-image: url("farm.jpg");
     background-size: cover;
+    padding: 40px 20px;
+    margin: -20px -20px 40px -20px; /* Negative margin to stretch full width */
+    text-align: center;
+    border-bottom: 1px solid #000000;
+}
+.hero-section-case {
+    background-image: url("case.jpeg");
+    background-size: auto;
     padding: 40px 20px;
     margin: -20px -20px 40px -20px; /* Negative margin to stretch full width */
     text-align: center;
