--- a/styles.css
+++ b/styles.css
@@ -133,12 +133,11 @@ h1, h2 {
     border-bottom: 1px solid #000000;
 }
 .hero-section-case {
-    background-image: url("case.jpeg");
-    background-size: auto;
-    padding: 40px 20px;
+    background-color: rgb(255, 255, 255);
     margin: -20px -20px 40px -20px; /* Negative margin to stretch full width */
     text-align: center;
     border-bottom: 1px solid #000000;
+   
 }
 
 .hero-title {
